refactor: Lsit<ColumnData> 대신 ColumnDatas 사용